# smart-honda

./: .gitignore  README.md  pyproject.toml
modules/debug_module/: Makefile  debug_trace.c
modules/hello_module/: Makefile  hello.c
scripts/: build_kernel.sh  setup_env.sh
smart_honda/: cli.py
smart_honda/debug/: analyzer.py  dmesg.py
smart_honda/kernel/: compiler.py  config.py  module.py
smart_honda/utils/: helpers.py
