[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-honda"
version = "0.1.0"
description = "Linux kernel debugging assistant: kernel compilation and module development"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
smart-honda = "smart_honda.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_honda*"]
